[gd_scene load_steps=16 format=3 uid="uid://p3k21cy70ism"]

[ext_resource type="Script" path="res://death_cut.gd" id="1_7kx87"]
[ext_resource type="FontFile" uid="uid://dn7s2e62gci47" path="res://fonts/Another Danger - Demo.otf" id="2_qmqio"]
[ext_resource type="AudioStream" uid="uid://dlenfi7ut21t6" path="res://audio/Music/DeathCutScene.mp3" id="3_4vhet"]

[sub_resource type="Animation" id="Animation_15qd1"]
resource_name = "Death"
length = 60.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 4.3, 60),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.00392157, 0.0117647, 0.0156863, 1), Color(0.00392157, 0.0117647, 0.0156863, 1), Color(0.670645, 0.0136971, 0.0205456, 1), Color(0.670645, 0.0136971, 0.0205456, 1)]
}

[sub_resource type="Animation" id="Animation_vppp5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.670645, 0.0136971, 0.0205456, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_611vv"]
_data = {
"Death": SubResource("Animation_15qd1"),
"RESET": SubResource("Animation_vppp5")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tlayk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nn8yn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k1uq1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vocys"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_woiua"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1w7ew"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hm7us"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s2t04"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0yp6m"]

[node name="DeathCut" type="Node2D"]
script = ExtResource("1_7kx87")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_611vv")
}
autoplay = "Death"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.670645, 0.0136971, 0.0205456, 1)

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.3125
anchor_right = 0.5
anchor_bottom = 0.3125
offset_left = -69.0
offset_top = -26.0
offset_right = 69.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_qmqio")
theme_override_font_sizes/font_size = 45
text = "GAME OVER
"
horizontal_alignment = 1
vertical_alignment = 3
metadata/_edit_use_anchors_ = true

[node name="Restart" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = 8.0
offset_right = 36.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.992157, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_tlayk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nn8yn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k1uq1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vocys")
theme_override_styles/focus = SubResource("StyleBoxEmpty_woiua")
text = "Restart
"

[node name="MainMenu" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 29.0
offset_right = 46.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.992157, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_tlayk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nn8yn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k1uq1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1w7ew")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hm7us")
text = "Main Menu
"

[node name="Quit" type="Button" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 50.0
offset_right = 35.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.992157, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_tlayk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nn8yn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k1uq1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_s2t04")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0yp6m")
text = "Quit
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4vhet")

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="pressed" from="CanvasLayer/ColorRect/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/Quit" to="." method="_on_quit_pressed"]
